ISS-DES-12-2-8 Fixed Bullet List Collapsing too early in the viewport

--- a/styles/how-to-use-strensiq.css
+++ b/styles/how-to-use-strensiq.css
@@ -185,7 +185,7 @@
 }
 
 .isrblock1 {
-	padding-right: 100px;
+	/* padding-right: 100px; */
 	padding-left: 20px;
 }
 
@@ -782,9 +782,6 @@
 		align-items: center;
 	}
 
-	.isrblock1 {
-		padding-right: 0;
-	}
 }
 
 @media screen and (min-width: 992px) and (max-width: 1366px) {
